# tailstream

./: Cargo.toml  README.md
.github/workflows/: release.yaml  rust.yml
src/: README.md  app.rs  main.rs
src/output/: loki.rs  mod.rs  redis.rs  ws.rs
